--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -17,7 +17,7 @@
             <!--Esto es una pequeña etiqueta para sugerencias de texto-->
             <ng-container *ngIf="registroForm.controls.username.errors != undefined">
               <div class="errorValidacion" *ngIf="registroForm.controls.username.errors.required">Debes introducir
-                algún valor
+                algún nombre
               </div>
               <div class="errorValidacion" *ngIf="registroForm.controls.username.errors.minlength">Debe tener al
                 menos 4
@@ -78,7 +78,8 @@
             </ng-container>
           </mat-form-field>
         </div> <!--Fin de la primera col6-->
-        <div class="col-lg-6">
+
+        <div class="col-lg-6"> <!--Inicio de la segunda col6-->
           <mat-form-field appearance="fill">
             <mat-label>Teléfono</mat-label>
             <input type="text" matInput placeholder="Tu teléfono particular" formControlName="telefono">
@@ -121,7 +122,12 @@
 
           <mat-form-field appearance="fill">
             <mat-label>Nivel de Entrenamiento</mat-label>
-            <mat-select >
+            <mat-select formControlName="nivel">
+              <ng-container *ngIf="registroForm.controls.nivel.errors != undefined">
+                <div class="errorValidacion ml-3" *ngIf="registroForm.controls.nivel.errors.required">Debes seleccionar
+                  un nivel
+                </div>
+              </ng-container>
               <mat-option >Principiante (menos de un año)</mat-option>
               <mat-option >Medio (entre 1 y 2 años)</mat-option>
               <mat-option >Avanzado (más de 2 años)</mat-option>
@@ -138,14 +144,15 @@
             </ng-container>
           </mat-form-field>
         </div> <!--Fin de la segunda col6-->
-          </div> <!--Fin de la row-->
+        </div> <!--Fin de la row-->
+
           <mat-form-field appearance="fill">
             <mat-label>Información Adicional</mat-label>
             <textarea matInput placeholder="¿Tienes alguna enfermedad o algo que necesitemos saber?"></textarea>
           </mat-form-field>
    
           <mat-card-actions class="botonLogin ">
-            <button mat-stroked-button color="primary" [disabled]="" class="temaBtnLogin mr-3"
+            <button mat-stroked-button color="primary" [disabled]="registroForm.invalid" class="temaBtnLogin mr-3"
              >Registrar</button>
             <a href="welcome"><button mat-stroked-button color="primary" class="temaBtnLogin" (click)="volverAwelcome()">Volver</button></a>
           </mat-card-actions>
