--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -1,3 +1,3 @@
-<app-navigation-contenido></app-navigation-contenido>
-HOLAAAAAAAAA USUARIO
+<app-navigation-header></app-navigation-header>
+HOLA USUARIO
 <app-footer></app-footer>
