--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -6,8 +6,8 @@
   <mat-card-header class="text-center">
     <div mat-card-avatar class="example-header-image"></div>
  
-    <mat-card-title class="text-center tipoLetra font-weight-bold">Horarios</mat-card-title>
-    <mat-card-subtitle>Reserva la hora que mejor se adapte a ti</mat-card-subtitle>
+    <mat-card-title class="text-center tipoLetra font-weight-bold justify w-responsive">Horarios</mat-card-title>
+    <mat-card-subtitle class="text-center justify w-responsive">Reserva la hora que mejor se adapte a ti</mat-card-subtitle>
 
   </mat-card-header>
   <img mat-card-image src="../../assets/images/horario.jpg" alt="Photo of a Shiba Inu">
@@ -17,7 +17,7 @@
     <mat-expansion-panel (opened)="panelOpenState = true"
                          (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
-        <mat-panel-title class="tipoLetra">
+        <mat-panel-title class="tipoLetra text-center justify w-responsive">
           Horario de Lunes a Sábado
         </mat-panel-title>
       </mat-expansion-panel-header>
@@ -74,11 +74,11 @@
 
   <div class="col-lg-4">
 <mat-card class="example-card">
-  <mat-card-header class="text-center">
+  <mat-card-header class="text-center justify w-responsive">
     <div mat-card-avatar class="example-header-image text-center"></div>
-    <mat-card-title class="text-center tipoLetra font-weight-bold">¿Qué hacemos?</mat-card-title>
+    <mat-card-title class="text-center tipoLetra font-weight-bold justify w-responsive">¿Qué hacemos?</mat-card-title>
     
-    <mat-card-subtitle>Ofrecemos una gran variedad de actividades</mat-card-subtitle>
+    <mat-card-subtitle class="text-center justify w-responsive">Ofrecemos una gran variedad de actividades</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image src="../../assets/images/entreno.jpg" alt="Photo of a Shiba Inu">
   <mat-accordion>
@@ -86,7 +86,7 @@
     <mat-expansion-panel (opened)="panelOpenState = true"
                          (closed)="panelOpenState = false">
       <mat-expansion-panel-header>
-        <mat-panel-title class="tipoLetra">
+        <mat-panel-title class="tipoLetra text-center justify w-responsive">
           Información de First Train
         </mat-panel-title>
         
@@ -115,10 +115,10 @@
 
 <div class="col-lg-4">
 <mat-card class="example-card">
-  <mat-card-header class="text-center">
+  <mat-card-header class="text-center justify w-responsive">
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title class="text-center tipoLetra font-weight-bold">Contacto</mat-card-title>
-    <mat-card-subtitle>Localízanos y pregunta sin compromiso</mat-card-subtitle>
+    <mat-card-title class="text-center justify tipoLetra font-weight-bold w-responsive">Contacto</mat-card-title>
+    <mat-card-subtitle class="text-center justify w-responsive">Localízanos y pregunta sin compromiso</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image src="../../assets/images/contacto.jpg" alt="Photo of a Shiba Inu">
   <mat-accordion>
