--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -16,7 +16,7 @@
             <a class="nav-link tipoLetra" href="">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tipoLetra" href="contenido">Contenido</a>
+          <a class="nav-link tipoLetra" href="contenido">Reservas</a>
       </li>
         <li class="nav-item">
           <a class="nav-link tipoLetra" href="">Foro</a>
@@ -54,7 +54,7 @@
 -->
 
   <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
-    <span class=" pr-1 tipoLetra"style="color: #bfbfbf;">Bienvenid@ a First Train, 
+    <span class=" pr-1 tipoLetra"style="color: #bfbfbf;">Bienvenid@ a First Train - 
       {{usuarioAutenticado}} {{usuarioAutenticado1}}</span>
   </ng-container>
 
