--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -1,3 +1,32 @@
 <app-navigation-header></app-navigation-header>
-HOLA USUARIO
+    <div class="container w-100 p-0">
+        <div class="row mt-2">
+            <h5 class="text-center tipoLetra">Reservas</h5>
+            <div> 
+                <ng-container *ngIf="!(listadoHoras.length == 0);">
+                <table mat-table [dataSource]="dataSourceTabla"> 
+                  <ng-container matColumnDef="Hora">
+                    <th mat-header-cell *matHeaderCellDef class="text-center">Hora</th> 
+                    <td mat-cell *matCellDef="let hora" class="text-center">{{hora.horas}}</td> 
+                  </ng-container> 
+                  <ng-container matColumnDef="Disponible">
+                    <th mat-header-cell *matHeaderCellDef class="text-center">Disponible</th> 
+                    <td mat-cell *matCellDef="" class="text-center"></td> 
+                  </ng-container> 
+                  <ng-container matColumnDef="Plazas Restantes">
+                    <th mat-header-cell *matHeaderCellDef class="text-center">Plazas</th> 
+                    <td mat-cell *matCellDef="" class="text-center"></td> 
+                  </ng-container> 
+                  <ng-container matColumnDef="Reservar" class="text-center">
+                    <th mat-header-cell *matHeaderCellDef class="text-center">Reservar</th> 
+                    <td mat-cell *matCellDef="" class="text-center"></td> 
+                  </ng-container> 
+                  <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+                  <tr mat-row *matRowDef="let hora; columns: columnas;"></tr>
+                </table> 
+                </ng-container>
+            </div>
+              
+        </div>
+    </div>
 <app-footer></app-footer>
