--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -54,7 +54,7 @@
 -->
 
   <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
-    <span class=" pr-1 tipoLetra"style="color: #bfbfbf;">Bienvenid@ a First Train - 
+    <span class=" pr-1 tipoLetra"style="color: #bfbfbf;">Bienvenido/a - 
       {{usuarioAutenticado}} {{usuarioAutenticado1}}</span>
   </ng-container>
 
