--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -27,7 +27,7 @@
 
           <mat-form-field appearance="fill">
             <mat-label>Apellido</mat-label>
-            <input type="text" matInput placeholder="Tus primer apellido" formControlName="apellidos">
+            <input type="text" matInput placeholder="Tu primer apellido" formControlName="apellidos">
             <mat-hint></mat-hint>
             <!--Esto es una pequeña etiqueta para sugerencias de texto-->
             <ng-container *ngIf="registroForm.controls.apellidos.errors != undefined">
