--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -1,32 +1,50 @@
 <app-navigation-header></app-navigation-header>
+
     <div class="container w-100 p-0">
-        <div class="row mt-2">
-            <h5 class="text-center tipoLetra">Reservas</h5>
+      
+        <div class="row mt-3 mb-3 ml-5">
+          <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
+            <span class=" pr-1 tipoLetra"style="color: #bfbfbf;">Hola 
+              {{usuarioAutenticado}}</span>
+          </ng-container>
             <div> 
-                <ng-container *ngIf="!(listadoHoras.length == 0);">
+                <ng-container *ngIf="!(listadoHoras.length == 0 && listadoReserva.length == 0);">
                 <table mat-table [dataSource]="dataSourceTabla"> 
                   <ng-container matColumnDef="Hora">
                     <th mat-header-cell *matHeaderCellDef class="text-center">Hora</th> 
-                    <td mat-cell *matCellDef="let hora" class="text-center">{{hora.horas}}</td> 
+                    <td mat-cell *matCellDef="let hora" class="text-center pt-1">{{hora.horas}}</td> 
                   </ng-container> 
                   <ng-container matColumnDef="Disponible">
                     <th mat-header-cell *matHeaderCellDef class="text-center">Disponible</th> 
-                    <td mat-cell *matCellDef="" class="text-center"></td> 
+                    <td mat-cell *matCellDef="let hora" class="text-center text-success pt-2"><ng-container *ngIf="hora.disponible == true else elseBlock"><mat-icon aria-hidden="false" aria-label="Example home icon">check_circle</mat-icon></ng-container></td> 
                   </ng-container> 
                   <ng-container matColumnDef="Plazas Restantes">
-                    <th mat-header-cell *matHeaderCellDef class="text-center">Plazas</th> 
-                    <td mat-cell *matCellDef="" class="text-center"></td> 
+                    <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Modalidad</th> 
+                    <td mat-cell *matCellDef="let hora" class="text-center pl-3 pt-2"><ng-container *ngIf="hora.id_actividad == 1 else elseBlock2"><mat-icon aria-hidden="false" aria-label="Example home icon">groups</mat-icon></ng-container></td> 
                   </ng-container> 
                   <ng-container matColumnDef="Reservar" class="text-center">
-                    <th mat-header-cell *matHeaderCellDef class="text-center">Reservar</th> 
-                    <td mat-cell *matCellDef="" class="text-center"></td> 
+                    <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Reservar</th> 
+                    <span  *ngIf="(usuarioAutenticado != undefined); else elseBlock3"></span>
+                    <td mat-cell *matCellDef="let hora"  class="text-center pl-3 pb-1 pt-1"><ng-container *ngIf="hora.disponible == true else elseBlock3"><button mat-icon-button color="" aria-label="Example icon button with a menu icon" [value]="hora.id_horario"  (click)="nuevaReserva(hora.id_horario, usuarioAutenticado)"> 
+                      <mat-icon aria-hidden="false" aria-label="Example home icon">control_point</mat-icon>
+                  </button></ng-container></td> 
+                   
+
                   </ng-container> 
                   <tr mat-header-row *matHeaderRowDef="columnas"></tr>
                   <tr mat-row *matRowDef="let hora; columns: columnas;"></tr>
                 </table> 
                 </ng-container>
+                <ng-template #elseBlock>
+                  <td class="text-center text-danger pl-3"><mat-icon aria-hidden="false" aria-label="Example home icon">close</mat-icon></td>
+              </ng-template>
+              <ng-template #elseBlock2>
+                <td class="text-center pl-3 pt-1"><mat-icon aria-hidden="false" aria-label="Example home icon">person</mat-icon></td>
+            </ng-template>
+            <ng-template #elseBlock3>
+              <td class="text-center text-danger pl-3 pt-1"><mat-icon aria-hidden="false" aria-label="Example home icon"></mat-icon></td>
+          </ng-template>
             </div>
-              
         </div>
     </div>
 <app-footer></app-footer>
