--- a/src/app/components/navigation-header/navigation-header.component.css
+++ b/src/app/components/navigation-header/navigation-header.component.css
@@ -37,6 +37,11 @@ nav{
     font-size: large;
 }
 
+.tipoLetra2{
+    font-family: 'Playfair Display', serif;
+    font-size: medium;
+}
+
 
 a {
     text-decoration: none;
