--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -1,6 +1,6 @@
 <app-navigation-header></app-navigation-header>
 
-    <div class="container w-100 p-0">
+    <div class="container-fluid">
       
         <div class="row mt-3 mb-3 ml-5">
           <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
@@ -8,7 +8,7 @@
               {{usuarioAutenticado}}</span>
           </ng-container>
             <div> 
-                <ng-container *ngIf="!(listadoHoras.length == 0 && listadoReserva.length == 0);">
+                <ng-container *ngIf="!(listadoHoras.length == 0);">
                 <table mat-table [dataSource]="dataSourceTabla"> 
                   <ng-container matColumnDef="Hora">
                     <th mat-header-cell *matHeaderCellDef class="text-center">Hora</th> 
@@ -25,9 +25,9 @@
                   <ng-container matColumnDef="Reservar" class="text-center">
                     <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Reservar</th> 
                     <span  *ngIf="(usuarioAutenticado != undefined); else elseBlock3"></span>
-                    <td mat-cell *matCellDef="let hora"  class="text-center pl-3 pb-1 pt-1"><ng-container *ngIf="hora.disponible == true else elseBlock3"><button mat-icon-button color="" aria-label="Example icon button with a menu icon" [value]="hora.id_horario"  (click)="nuevaReserva(hora.id_horario, usuarioAutenticado)"> 
+                    <td mat-cell *matCellDef="let hora"  class="text-center pl-3 pb-1 pt-1"><ng-container *ngIf="hora.disponible == true else elseBlock3"><button mat-icon-button color="" aria-label="Example icon button with a menu icon" [value]="hora.id_horario" (click)="nuevaReserva(hora.id_horario)"> 
                       <mat-icon aria-hidden="false" aria-label="Example home icon">control_point</mat-icon>
-                  </button></ng-container></td> 
+                  </button>{{hora.id_horario}}</ng-container></td> 
                    
 
                   </ng-container> 
