--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -5,30 +5,37 @@
   </button>
   
   <!-- logo -->
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand ml-3" href="#">
     <img src="../../assets/images/logoprincipal.jpg" width="70px;"  alt="">
   </a>
   <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock">
-     <!-- enlaces -->
-     <div class="collapse navbar-collapse mr-1 " id="opciones">   
-      <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link tipoLetra" href="">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tipoLetra" href="contenido">Reservas</a>
+    <!-- enlaces -->
+    <div class="collapse navbar-collapse mr-1 " id="opciones">   
+     <ul class="navbar-nav">
+       <li class="nav-item">
+         <a class="nav-link tipoLetra2" href="contenido">Reservas</a>
       </li>
-        <li class="nav-item">
-          <a class="nav-link tipoLetra" href="">Foro</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tipoLetra" href="">Multimedia</a>
-        </li>          
-      </ul>
-    </div>
-  </ng-container>
+      <li class="nav-item">
+        <a class="nav-link tipoLetra2" href="contenido">MisReservas</a>
+     </li>
+       <li class="nav-item">
+         <a class="nav-link tipoLetra2" href="">Foro</a>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link tipoLetra2" href="">Multimedia</a>
+       </li>  
+       <ng-container *ngIf="(usuarioAutenticado2 == 1)">
+       <li class="nav-item">
+        <a class="nav-link tipoLetra2" href="">Listado</a>
+      </li>   
+      <li class="nav-item">
+        <a class="nav-link tipoLetra2" href="">Gestión</a>
+      </li>   
+    </ng-container>        
+     </ul>
+   </div>
+ </ng-container>
  
-
 <ng-template #elseBlock>
     <div class="collapse navbar-collapse ml-2 mr-1 " id="opciones">   
       <ul class="navbar-nav">
@@ -47,14 +54,14 @@
 </ng-template>
 
 <ng-template #elseBlock2>
-  <h6 class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</h6>
+  <p class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</p>
 </ng-template>
 <!--
   <h6 class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</h6>
 -->
 
   <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
-    <span class=" pr-1 tipoLetra"style="color: #bfbfbf;">Bienvenido/a - 
+    <span class="pr-1 tipoLetra2"style="color: #bfbfbf;">
       {{usuarioAutenticado}} {{usuarioAutenticado1}}</span>
   </ng-container>
 
