--- a/src/app/components/contenido/contenido.component.css
+++ b/src/app/components/contenido/contenido.component.css
@@ -1,3 +1,8 @@
 .tamanoCard{
     width: 60%;
 }
+
+::ng-deep .mat-ink-bar {
+    background-color: var(--primary-color,#27a800) !important;
+    width: 159px !important; 
+}
