--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -5,7 +5,7 @@
   </button>
   
   <!-- logo -->
-  <a class="navbar-brand ml-3" href="#">
+  <a class="navbar-brand ml-2" href="#">
     <img src="../../assets/images/logoprincipal.jpg" width="70px;"  alt="">
   </a>
   <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock">
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse mr-1 " id="opciones">   
      <ul class="navbar-nav">
        <li class="nav-item">
-         <a class="nav-link tipoLetra2" href="contenido">Reservas</a>
+         <a class="nav-link tipoLetra2" href="contenido">Reservar</a>
       </li>
       <li class="nav-item">
         <a class="nav-link tipoLetra2" href="contenido">MisReservas</a>
@@ -60,12 +60,13 @@
   <h6 class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</h6>
 -->
 
-  <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
-    <span class="pr-1 tipoLetra2"style="color: #bfbfbf;">
-      {{usuarioAutenticado}} {{usuarioAutenticado1}}</span>
-  </ng-container>
+ 
 
   <ng-container>
+    <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
+      <span class="tipoLetra2"style="color: #bfbfbf;">Hola
+        {{usuarioAutenticado}} {{usuarioAutenticado1}}</span>
+    </ng-container>
     <button mat-icon-button color="accent" [matMenuTriggerFor]="menu">
       <!--<app-imagen-usuario [usuario]="usuarioAutenticado" [width]="50" [height]="50"></app-imagen-usuario>-->
       <mat-icon class="colorMenuButton">more_vert</mat-icon>
