--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -60,8 +60,8 @@
                         </mat-expansion-panel-header>
                         <p class="w-responsive justify text-center">
                           En primer lugar escoge la franja horaria que más se adapte a ti. Una vez hayas escogido, 
-                          nuestro entrenador formará los grupos para la semana. El horario que escojas, será para dos días por semana. 
-                          Por ejemplo, si escoges acudir al centro de 09:00 - 10:00, irás en esta franja según los días que acuerdes con nuestro entrenador
+                          nuestro entrenador formará los grupos para la semana. El horario que escojas, será para dos días. 
+                          Por ejemplo, si escoges acudir al centro de 09:00 - 10:00, irás en esta franja según los días de la semana que acuerdes con nuestro entrenador
                         </p>
     
                       </mat-expansion-panel>
@@ -118,7 +118,7 @@
                           
                         </mat-expansion-panel-header>
                         <p class="w-responsive justify text-center">
-                          Cada franja horaria tendrá un total de <strong class="text-danger">5</strong> plazas. Cuando este grupo esté formado, aparecerá como NO disponible 
+                          Cada franja horaria tendrá un total de <strong class="text-danger">5</strong> plazas. Cuando el grupo esté formado, aparecerá como NO disponible 
                         </p>
     
                       </mat-expansion-panel>
