--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -64,7 +64,7 @@
 
   <ng-container>
     <ng-container *ngIf="(usuarioAutenticado != undefined); else elseBlock2">
-      <span class="tipoLetra2"style="color: #bfbfbf;">Hola
+      <span class="tipoLetra2"style="color: #bfbfbf;">Hola,
         {{usuarioAutenticado}} {{usuarioAutenticado1}}</span>
     </ng-container>
     <button mat-icon-button color="accent" [matMenuTriggerFor]="menu">
