--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -16,14 +16,17 @@
          <a class="nav-link tipoLetra2" href="contenido">Reservar</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link tipoLetra2" href="contenido">MisReservas</a>
+        <a class="nav-link tipoLetra2" href="misreservas">MisReservas</a>
      </li>
        <li class="nav-item">
-         <a class="nav-link tipoLetra2" href="">Foro</a>
+         <a class="nav-link tipoLetra2" href="">Grupos</a>
        </li>
        <li class="nav-item">
-         <a class="nav-link tipoLetra2" href="">Multimedia</a>
+         <a class="nav-link tipoLetra2" href="">Foro</a>
        </li>  
+       <li class="nav-item">
+        <a class="nav-link tipoLetra2" href="">Multimedia</a>
+      </li>  
        <ng-container *ngIf="(usuarioAutenticado2 == 1)">
        <li class="nav-item">
         <a class="nav-link tipoLetra2" href="">Listado</a>
