--- a/src/app/components/misreservas/misreservas.component.html
+++ b/src/app/components/misreservas/misreservas.component.html
@@ -1,3 +1,50 @@
 <app-navigation-header></app-navigation-header>
-Hola 
+<div class="container-fluid">
+<div class="row mt-3 mb-3">
+   <div class="col-sm-6">
+    <h5 class="text-center">Estas son tus reservas</h5>
+    <div>
+    <ng-container *ngIf="!(listadoMisReservas.length == 0);">
+   
+    <table mat-table [dataSource]="dataSourceTabla"> 
+      <ng-container matColumnDef="Nombre">
+        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th> 
+        <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.nombre}}</td> 
+      </ng-container> 
+      <ng-container matColumnDef="Apellidos">
+        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Apellidos</th> 
+        <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.apellidos}}</td> 
+      </ng-container> 
+      <ng-container matColumnDef="Fecha">
+        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Fecha que hiciste la reserva</th> 
+        <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.fecha | date:'dd/MM/yy HH:mm:ss a'}}</td> 
+      </ng-container> 
+      <ng-container matColumnDef="Horario" class="text-center">
+        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Horario</th> 
+        <span  *ngIf=""></span>
+        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><strong>{{hora.horas}}</strong></td> 
+      </ng-container> 
+      <ng-container matColumnDef="Cambiar" class="text-center">
+        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Cambiar</th> 
+        <span  *ngIf=""></span>
+        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" > 
+            <mat-icon class="colorButtonUpdate" >update</mat-icon>
+        </button></td> 
+      </ng-container> 
+      <ng-container matColumnDef="Eliminar" class="text-center">
+        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Eliminar</th> 
+        <span  *ngIf=""></span>
+        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" > 
+            <mat-icon class="colorButtonDelete" >delete</mat-icon>
+        </button></td> 
+      </ng-container> 
+      <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+      <tr mat-row *matRowDef="let hora; columns: columnas;"></tr>
+    </table> 
+    </ng-container>
+</div>
+</div>
+</div>
+</div>
+
 <app-footer></app-footer>
