--- a/src/app/components/misreservas/misreservas.component.css
+++ b/src/app/components/misreservas/misreservas.component.css
@@ -5,3 +5,13 @@
 .colorButtonUpdate{
     color: #27a800;
 }
+
+.tipoLetra{
+    
+    font-family: 'Playfair Display', serif;
+    font-size: large;
+}
+
+table{
+    width: 100%;
+}
