--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -2,9 +2,9 @@
 
     <div class="container-fluid">
       
-        <div class="row mt-3 mb-3 ml-3">
-          <div class="col-md-1"></div>
-            <div class="col-md-5 flex"> 
+        <div class="row mt-3 mb-3">
+         
+            <div class="col-md-6 flex"> 
                 <ng-container *ngIf="!(listadoHoras.length == 0);">
                 <table mat-table [dataSource]="dataSourceTabla"> 
                   <ng-container matColumnDef="Hora">
