--- a/src/app/components/misreservas/misreservas.component.html
+++ b/src/app/components/misreservas/misreservas.component.html
@@ -1,11 +1,10 @@
 <app-navigation-header></app-navigation-header>
 <div class="container-fluid">
-<div class="row mt-3 mb-3">
-   <div class="col-sm-6">
-    <h5 class="text-center">Estas son tus reservas</h5>
-    <div>
+<div class="row mt-4 mb-3">
+   <div class="col-md-6">
     <ng-container *ngIf="!(listadoMisReservas.length == 0);">
-   
+        <h4 class="text-center tipoLetra ">Estas son tus reservas, {{usuarioAutenticado}}</h4>
+
     <table mat-table [dataSource]="dataSourceTabla"> 
       <ng-container matColumnDef="Nombre">
         <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th> 
@@ -16,7 +15,7 @@
         <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.apellidos}}</td> 
       </ng-container> 
       <ng-container matColumnDef="Fecha">
-        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Fecha que hiciste la reserva</th> 
+        <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Fecha de la reserva</th> 
         <td mat-cell *matCellDef="let hora" class="text-center pl-3">{{hora.fecha | date:'dd/MM/yy HH:mm:ss a'}}</td> 
       </ng-container> 
       <ng-container matColumnDef="Horario" class="text-center">
@@ -27,14 +26,25 @@
       <ng-container matColumnDef="Cambiar" class="text-center">
         <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Cambiar</th> 
         <span  *ngIf=""></span>
-        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" > 
+        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-button [matMenuTriggerFor]="menu">
             <mat-icon class="colorButtonUpdate" >update</mat-icon>
-        </button></td> 
+        </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item [value]="1" (click)="updateReserva(hora.id_reservas, 1)">09:00-10:00</button>
+              <button mat-menu-item [value]="2" (click)="updateReserva(hora.id_reservas, 2)">10:00-11:00</button>
+              <button mat-menu-item [value]="3" (click)="updateReserva(hora.id_reservas, 3)">11:00-12:00</button>
+              <button mat-menu-item [value]="4" (click)="updateReserva(hora.id_reservas, 4)">16:00-17:00</button>
+              <button mat-menu-item [value]="5" (click)="updateReserva(hora.id_reservas, 5)">17:00-18:00</button>
+              <button mat-menu-item [value]="6" (click)="updateReserva(hora.id_reservas, 6)">18:00-19:00</button>
+              <button mat-menu-item [value]="7" (click)="updateReserva(hora.id_reservas, 7)">19:00-20:00</button>
+              <button mat-menu-item [value]="8" (click)="updateReserva(hora.id_reservas, 8)">20:00-21:00</button>
+              <button mat-menu-item [value]="9" (click)="updateReserva(hora.id_reservas, 9)">21:00-22:00</button>
+            </mat-menu></td> 
       </ng-container> 
       <ng-container matColumnDef="Eliminar" class="text-center">
         <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Eliminar</th> 
         <span  *ngIf=""></span>
-        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" > 
+        <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" [value]="hora.id_reservas" (click)="deleteReserva(hora.id_reservas)"> 
             <mat-icon class="colorButtonDelete" >delete</mat-icon>
         </button></td> 
       </ng-container> 
@@ -43,6 +53,19 @@
     </table> 
     </ng-container>
 </div>
+<div class="col-md-6">
+    <mat-card class="example-card">
+        
+        <img mat-card-image src="../../assets/images/reserva.jpeg" alt="Photo of a Shiba Inu">
+        <mat-card-content class="">
+          <p class="w-responsive justify text-center ">
+            Aquí encontrarás un listado con todas tus reservas activas. 
+            Podrás cambiar la franja horaria disponible o eliminar la reserva
+          </p>
+        </mat-card-content>
+       
+      </mat-card>
+      
 </div>
 </div>
 </div>
