--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -18,12 +18,12 @@
       <li class="nav-item">
         <a class="nav-link tipoLetra2" href="misreservas">MisReservas</a>
      </li>
+     <li class="nav-item">
+      <a class="nav-link tipoLetra2" href="listado">Grupos</a>
+    </li>
        <li class="nav-item">
          <a class="nav-link tipoLetra2" href="">Foro</a>
        </li>  
-       <li class="nav-item">
-        <a class="nav-link tipoLetra2" href="">Multimedia</a>
-      </li>  
        <ng-container *ngIf="(usuarioAutenticado2 == 1)">
        <li class="nav-item">
         <a class="nav-link tipoLetra2" href="">Listado</a>
