--- a/src/app/components/listado/listado.component.html
+++ b/src/app/components/listado/listado.component.html
@@ -43,7 +43,7 @@
 </div> 
     
   <ng-template #elseBlock>
-    <p class="text-center text-danger mat-body-2">El grupo aún no está formado</p>
+    <p class="text-center text-danger mat-body-2">Aún no hay nadie en esta hora</p>
 </ng-template>
 
 </div>
