--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -26,7 +26,7 @@
        </li>  
        <ng-container *ngIf="(usuarioAutenticado2 == 1)">
        <li class="nav-item">
-        <a class="nav-link tipoLetra2" href="">Listado</a>
+        <a class="nav-link tipoLetra2" href="todaslasreservas">Listado</a>
       </li>   
       <li class="nav-item">
         <a class="nav-link tipoLetra2" href="">Gestión</a>
@@ -54,7 +54,7 @@
 </ng-template>
 
 <ng-template #elseBlock2>
-  <p class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</p>
+  <p class="tipoLetra mt-3 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</p>
 </ng-template>
 <!--
   <h6 class="tipoLetra mt-2 mr-2" style="color: #bfbfbf;">First Train - Entrenamiento Personal</h6>
