--- a/src/app/components/todas-las-reservas/todas-las-reservas.component.html
+++ b/src/app/components/todas-las-reservas/todas-las-reservas.component.html
@@ -1,9 +1,12 @@
 <app-navigation-header></app-navigation-header>
 <div class="container-fluid">
-    <div class="row mt-4 mb-3" style="overflow-x:auto;">
+    <div class="row mt-3 mb-3" style="overflow-x:auto;">
         <div class="col-lg-12">
 <ng-container *ngIf="!(listadoTodasLasReservas.length == 0);">
-   
+  <mat-form-field>
+    <mat-label>Filtro</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="filtra por campo" #input>
+  </mat-form-field>
 <table mat-table [dataSource]="dataSourceTabla" class="" > 
   <ng-container matColumnDef="Nombre">
     <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th> 
@@ -44,6 +47,11 @@
   <tr mat-header-row *matHeaderRowDef="columnas"></tr>
   <tr mat-row *matRowDef="let hora; columns: columnas;"></tr>
 </table> 
+<mat-paginator [length]="length"
+               [pageSize]="pageSize"
+               [pageSizeOptions]="pageSizeOptions"
+               (page)="pageEvent = $event">
+</mat-paginator>
 </ng-container>
 </div>
 </div>
