--- a/src/app/components/todas-las-reservas/todas-las-reservas.component.html
+++ b/src/app/components/todas-las-reservas/todas-las-reservas.component.html
@@ -3,10 +3,12 @@
     <div class="row mt-3 mb-3" style="overflow-x:auto;">
         <div class="col-lg-12">
 <ng-container *ngIf="!(listadoTodasLasReservas.length == 0);">
-  <mat-form-field>
+  <!--Filtro tabla-->
+  <mat-form-field >
     <mat-label>Filtro</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="filtra por campo" #input>
   </mat-form-field>
+  <!--Fin Filtro tabla-->
 <table mat-table [dataSource]="dataSourceTabla" class="" > 
   <ng-container matColumnDef="Nombre">
     <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th> 
@@ -33,7 +35,7 @@
     </button>
         <mat-menu #menu="matMenu">
           <ng-container *ngFor="let h of listadoHorasDisponibles">
-          <button mat-menu-item [value]="h.id_horario" (click)="updateReserva(hora.id_reservas, h.id_horario, hora.id_usu)">{{h.horas}}</button>
+          <button mat-menu-item [value]="h.id_horario" (click)="updateReserva(hora.id_reservas, h.id_horario, hora.id_usuario)">{{h.horas}}</button>
         </ng-container>
         </mat-menu></td> 
   </ng-container> 
@@ -47,11 +49,7 @@
   <tr mat-header-row *matHeaderRowDef="columnas"></tr>
   <tr mat-row *matRowDef="let hora; columns: columnas;"></tr>
 </table> 
-<mat-paginator [length]="length"
-               [pageSize]="pageSize"
-               [pageSizeOptions]="pageSizeOptions"
-               (page)="pageEvent = $event">
-</mat-paginator>
+
 </ng-container>
 </div>
 </div>
