--- a/src/app/components/todas-las-reservas/todas-las-reservas.component.html
+++ b/src/app/components/todas-las-reservas/todas-las-reservas.component.html
@@ -42,7 +42,7 @@
   <ng-container matColumnDef="Eliminar" class="text-center">
     <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Eliminar</th> 
     <span  *ngIf=""></span>
-    <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" [value]="hora.id_reservas"> 
+    <td mat-cell *matCellDef="let hora"  class="text-center pl-3"><button mat-icon-button color="primary" aria-label="Example icon button with a menu icon" [value]="hora.id_reservas" (click)="deleteReserva(hora.id_reservas)"> 
         <mat-icon class="colorButtonDelete" >delete</mat-icon>
     </button></td> 
   </ng-container> 
