--- a/src/app/components/navigation-header/navigation-header.component.html
+++ b/src/app/components/navigation-header/navigation-header.component.html
@@ -16,20 +16,17 @@
          <a class="nav-link tipoLetra2" href="contenido">Reservar</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link tipoLetra2" href="misreservas">MisReservas</a>
+        <a class="nav-link tipoLetra2" href="misreservas">Mis-Reservas</a>
      </li>
      <li class="nav-item">
       <a class="nav-link tipoLetra2" href="listado">Grupos</a>
     </li>
-       <li class="nav-item">
-         <a class="nav-link tipoLetra2" href="">Foro</a>
-       </li>  
        <ng-container *ngIf="(usuarioAutenticado2 == 1)">
        <li class="nav-item">
         <a class="nav-link tipoLetra2" href="todaslasreservas">Listado</a>
       </li>   
       <li class="nav-item">
-        <a class="nav-link tipoLetra2" href="">Gestión</a>
+        <a class="nav-link tipoLetra2" href="gestion">Gestión</a>
       </li>   
     </ng-container>        
      </ul>
