--- a/src/app/components/misreservas/misreservas.component.html
+++ b/src/app/components/misreservas/misreservas.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 <div class="row mt-4 mb-3">
    <div class="col-md-6">
-    <ng-container *ngIf="!(listadoMisReservas.length == 0);">
+    <ng-container *ngIf="!(listadoMisReservas.length == 0); else elseBlock">
         <h4 class="text-center tipoLetra ">Estas son tus reservas, {{usuarioAutenticado}}</h4>
 
     <table mat-table [dataSource]="dataSourceTabla"> 
@@ -47,6 +47,9 @@
     </table> 
     </ng-container>
 </div>
+<ng-template #elseBlock>
+  <p class="text-center text-danger mat-body-2">Aún no tienes ninguna reserva</p>
+</ng-template>
 <div class="col-md-6">
     <mat-card class="example-card">
         
