--- a/src/app/components/todas-las-reservas/todas-las-reservas.component.html
+++ b/src/app/components/todas-las-reservas/todas-las-reservas.component.html
@@ -9,6 +9,7 @@
     <input matInput (keyup)="applyFilter($event)" placeholder="filtra por campo" #input>
   </mat-form-field>
   <!--Fin Filtro tabla-->
+  <p class="mt-3 float-right tipoLetra">Gestión de todas las reservas</p>
 <table mat-table [dataSource]="dataSourceTabla" class="" > 
   <ng-container matColumnDef="Nombre">
     <th mat-header-cell *matHeaderCellDef class="text-center pl-3">Nombre</th> 
